--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,11 @@ name: ci
 
 on:
   workflow_dispatch:
+    inputs:
+      thriftVersion:
+        description: 'Thrift version'
+        required: true
+        default: '0.16.0'
   push:
     branches:
       - master
@@ -26,5 +31,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          file: 0.16/Dockerfile
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/thrift:latest,${{ secrets.DOCKERHUB_USERNAME }}/thrift:0.16.0
+          build-args: THRIFT_VERSION=${{ github.event.inputs.thriftVersion }}
+          file: Dockerfile
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/thrift:${{ github.event.inputs.thriftVersion }}
